--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ app:
   time_format: '2006-01-02T15:04:05'
 
 cache:
-  address: 'localhost'
+  address: '192.168.0.105'
   port: ':6379'
   password: 'Awesome85**'
   db: 0
@@ -13,3 +13,8 @@ cache:
   minimum_idle_connections: 10
   maximum_retries: 1
   messages_key_format: 'messages.for.%s'
+
+health:
+  port: ':8200'
+  shutdown_endpoint: '/api/v1/superhero_offline_messages_health/shutdown'
+  content_type: 'application/json'
